<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/complaint_description"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvAuthCodeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/authorization_code"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTop"

            />

        <TextView
            android:id="@+id/tvAuthCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/first_name"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvAuthCodeTitle"
            app:layout_constraintTop_toTopOf="@id/tvAuthCodeTitle" />

        <TextView
            android:id="@+id/tvProviderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/provider"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/tvAuthCodeTitle"
            app:layout_constraintTop_toBottomOf="@id/tvAuthCodeTitle" />

        <TextView
            android:id="@+id/tvProviderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvAuthCode"
            app:layout_constraintTop_toTopOf="@id/tvProviderTitle" />



        <TextView
            android:id="@+id/tvAgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvProviderTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvProviderTitle" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvProviderName"
            app:layout_constraintTop_toTopOf="@+id/tvAgeTitle" />

        <TextView
            android:id="@+id/tvDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvAgeTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvAgeTitle" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_04_2020"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvAge"
            app:layout_constraintTop_toTopOf="@+id/tvDateTitle" />

        <TextView
            android:id="@+id/tvBillTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bills"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvAgeTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvDateTitle" />

        <TextView
            android:id="@+id/tvBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bills"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvDate"
            app:layout_constraintTop_toTopOf="@+id/tvBillTitle" />

        <TextView
            android:id="@+id/tvProgressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/progress"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvBillTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvBillTitle" />

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rejected"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvBill"
            app:layout_constraintTop_toTopOf="@+id/tvProgressTitle" />

        <TextView
            android:id="@+id/tvRejReasonsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reject_reason"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/tvProgressTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvProgressTitle" />

        <TextView
            android:id="@+id/tvRejectReason"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/rejected"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvProgress"
            app:layout_constraintTop_toTopOf="@+id/tvRejReasonsTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
